--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -15,13 +15,16 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="epics.binarytrack.MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
+            android:label="@string/app_name"
+            android:screenOrientation="sensorLandscape"
+            android:theme="@android:style/Theme.NoTitleBar">
+                        <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="QuestionScreen" android:screenOrientation="sensorLandscape" android:theme="@android:style/Theme.NoTitleBar"></activity>
     </application>
 
 </manifest>
