added file to connect to phone through sockets

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -17,14 +17,18 @@
             android:name="epics.binarytrack.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="sensorLandscape"
-            android:theme="@android:style/Theme.NoTitleBar">
-                        <intent-filter>
+            android:theme="@android:style/Theme.NoTitleBar" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="epics.binarytrack.QuestionActivity" android:screenOrientation="sensorLandscape" android:theme="@android:style/Theme.NoTitleBar"></activity>
+        <activity
+            android:name="epics.binarytrack.QuestionActivity"
+            android:screenOrientation="sensorLandscape"
+            android:theme="@android:style/Theme.NoTitleBar" >
+        </activity>
     </application>
 
 </manifest>
