--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -7,12 +7,14 @@
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="10" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name="ServerApplication" >
         <activity
             android:name="epics.binarytrack.MainActivity"
             android:label="@string/app_name"
