--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -7,16 +7,18 @@
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="10" />
-    <uses-permission android:name="android.permission.INTERNET"/>
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    
     <application
+        android:name="ServerApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:name="ServerApplication" >
-            android:name="epics.binarytrack.MainActivity"
+        android:theme="@style/AppTheme" >
         <activity
+            android:name="epics.binarytrack.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="sensorLandscape"
             android:theme="@android:style/Theme.NoTitleBar" >
